# OpenGL-CL-Interop

./: LICENSE  README.md
src/: build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/java/com/example/native_activity/: MainActivity.java
